Second commit with digital clock commented out

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="main.css">
-  <script src="main.js" defer></script>
+  <script src="analog.js" defer></script>
+  <script src="digital.js" defer></script>
   <title>Clocks</title>
 </head>
 <body>
@@ -38,11 +39,56 @@
           </div>
         </div>
       </div>
-    </section><!-- .clock-analog__lg -->
+    </section><!-- .clock-analog__container -->
 
-    <section class="clock-digital">
+    <!-- <button class="button">Button</button>
 
-    </section><!-- .clock-digital -->
+    <section class="clock-digital__container">
+      <div class="clock-digital__container--clock">
+        <div class="clock-digital__container--face">
+          <div class="clock-digital__container--number clock-digital__container--hours-left">
+            <div class="unit unit-top-top"></div>
+            <div class="unit unit-top-right"></div>
+            <div class="unit unit-middle"></div>
+            <div class="unit unit-top-left"></div>
+            <div class="unit unit-bottom-right"></div>
+            <div class="unit unit-bottom-bottom"></div>
+            <div class="unit unit-bottom-left"></div> 
+          </div>
+          <div class="clock-digital__container--number clock-digital__container--hours-right">
+            <div class="unit unit-top-top"></div>
+            <div class="unit unit-top-right"></div>
+            <div class="unit unit-middle"></div>
+            <div class="unit unit-top-left"></div>
+            <div class="unit unit-bottom-right"></div>
+            <div class="unit unit-bottom-bottom"></div>
+            <div class="unit unit-bottom-left"></div>
+          </div>
+          <div class="clock-digital__container--colon" data-colon>
+            <div class="unit-top-top"></div>
+            <div class="unit-bottom-bottom"></div>
+          </div>
+          <div class="clock-digital__container--number clock-digital__container--minutes-left" data-minutes-left>
+            <div class="unit unit-top-top"></div>
+            <div class="unit unit-top-right"></div>
+            <div class="unit unit-middle"></div>
+            <div class="unit unit-top-left"></div>
+            <div class="unit unit-bottom-right"></div>
+            <div class="unit unit-bottom-bottom"></div>
+            <div class="unit unit-bottom-left"></div>
+          </div>
+          <div class="clock-digital__container--number clock-digital__container--minutes-right" data-minutes-right>
+            <div class="unit unit-top-top"></div>
+            <div class="unit unit-top-right"></div>
+            <div class="unit unit-middle"></div>
+            <div class="unit unit-top-left"></div>
+            <div class="unit unit-bottom-right"></div>
+            <div class="unit unit-bottom-bottom"></div>
+            <div class="unit unit-bottom-left"></div>
+          </div>
+        </div>
+      </div>
+    </section>.clock-digital__container -->
 
   </main>
 </body>
